[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 36.0
margin_top = 137.0
margin_right = 329.0
margin_bottom = 189.0

[node name="Label2" type="Label" parent="LineEdit"]
margin_left = 4.0
margin_top = -23.0
margin_right = 174.0
margin_bottom = -1.0
text = "adicione qualquer valor"

[node name="my_value" type="Button" parent="LineEdit"]
margin_left = 307.0
margin_top = -3.0
margin_right = 438.0
margin_bottom = 52.0
text = "mostrar meu valor"

[node name="Label" type="Label" parent="."]
margin_left = 386.0
margin_top = 344.0
margin_right = 449.0
margin_bottom = 368.0
rect_scale = Vector2( 3, 3 )

[node name="show_list" type="Button" parent="."]
margin_left = 59.0
margin_top = 29.0
margin_right = 291.0
margin_bottom = 89.0
text = "mostrar lista"

[node name="show_text" type="Button" parent="."]
margin_left = 338.0
margin_top = 33.0
margin_right = 545.0
margin_bottom = 88.0
text = "mostrar texto"

[node name="lista_user" type="LineEdit" parent="."]
margin_left = 38.0
margin_top = 220.0
margin_right = 331.0
margin_bottom = 272.0

[node name="add" type="Button" parent="lista_user"]
margin_left = 304.0
margin_top = -4.0
margin_right = 435.0
margin_bottom = 51.0
text = "add"

[node name="add2" type="Button" parent="lista_user"]
margin_left = 481.0
margin_top = -4.0
margin_right = 612.0
margin_bottom = 51.0
text = "mostrar minha lista"

[node name="Label2" type="Label" parent="lista_user"]
margin_left = 5.0
margin_top = -24.0
margin_right = 208.0
margin_bottom = -2.0
text = "adicione qualquer valor na  lista"

[node name="clear" type="Button" parent="."]
margin_left = 722.0
margin_top = 68.0
margin_right = 964.0
margin_bottom = 141.0
text = "clear text"

[connection signal="pressed" from="LineEdit/my_value" to="." method="_on_my_value_pressed"]
[connection signal="pressed" from="show_list" to="." method="_on_show_list_pressed"]
[connection signal="pressed" from="show_text" to="." method="_on_show_text_pressed"]
[connection signal="pressed" from="lista_user/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="lista_user/add2" to="." method="_on_add2_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
